adding env to enable oidc auth

--- a/apps/beeai-server/template.env
+++ b/apps/beeai-server/template.env
@@ -1,6 +1,7 @@
 PERSISTENCE__ENCRYPTION_KEY=3YwblH4IiFObl0igcHFqd-9BxV7csrrCrunaVotMda8=
 LOGGING__LEVEL_SQLALCHEMY='INFO'
 AUTH__DISABLE_AUTH=true
+OIDC__DISABLE_OIDC=true
 PORT=18333
 PROVIDER__SELF_REGISTRATION_USE_LOCAL_NETWORK=true
 PROVIDER__AUTO_REMOVE_ENABLED=true
