--- a/apps/beeai-server/pyproject.toml
+++ b/apps/beeai-server/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [{ name = "IBM Corp." }]
 requires-python = ">=3.13,<4.0"
 dependencies = [
+    "Authlib>=1.6.0",
     "acp-sdk>=1.0.0",
     "aiohttp>=3.11.11",
     "anyio>=4.9.0",
