--- a/helm/templates/config/secret.yaml
+++ b/helm/templates/config/secret.yaml
@@ -35,5 +35,10 @@ data:
   {{- else }}
   adminPassword: {{ .Values.auth.admin_password | b64enc | quote }}
   {{ end }}
+  {{- if and .Values.oidc.enabled (empty .Values.oidc.client_id) }}
+  {{fail ".Values.oidc.client_id is missing, please add client_id"}}
+  {{- else }}
+  clientId: {{ .Values.oidc.client_id | b64enc | quote }}
+  {{ end }}
   s3AccessKeyId: {{ include "beeai.s3.accessKeyID" . | b64enc | quote }}
   s3AccessKeySecret: {{ include "beeai.s3.accessKeySecret" . | b64enc | quote }}
