--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -17,7 +17,10 @@ unmanagedProviders: [ ]
 externalRegistries: { }
 
 oidc:
-  client_id: ""
+  client_id: "3112679d-7981-4110-8ce8-0171eb4bdb64"
+  client_secret: "t5uqqfDv7r"
+  authorize_url: "https://sox.verify.ibm.com/v1.0/endpoint/default/authorize"
+  token_url: "https://sox.verify.ibm.com/v1.0/endpoint/default/token"
   enabled: true # Warning, disable only for local deployments
 
 auth:
